created api route for primary screening and also added .env file

--- a/database/projects.json
+++ b/database/projects.json
@@ -31,7 +31,14 @@
             "description": "",
             "owner": "Shreya",
             "status": "Active"
+        },
+        {
+            "id": "PRJ-005",
+            "title": "Zest-Microetcher",
+            "duration": "Past 5 years",
+            "description": "",
+            "owner": "Nikita ",
+            "status": "Active"
         }
-        
     ]
 }
