--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PRIMARY_API_URL=http://localhost:7860/api/v1/run/primaryscreen-1-1-1
 PRIMARY_API_KEY=sk-43MfyQx0VBKKn2qQnFaP4HkiPBATYmp3JlTyK-hJqNg
+SECONDARY_API_KEY=sk-B1VLnbl04nLyXhYpoxDKPZAdi2vMwoLNEi6vsKNIMmc
